미러모드 & 카메라 네임태그

--- a/FrontEnd/logos-test/src/components/OvVideo.css
+++ b/FrontEnd/logos-test/src/components/OvVideo.css
@@ -3,6 +3,10 @@
     position: relative;
     width: 100%;
     max-width: 600px;
+    transform: rotateY(180deg);
+    -webkit-transform:rotateY(180deg); /* Safari and Chrome */
+    -moz-transform:rotateY(180deg); /* Firefox */
+    /*Mirror code ends*/
   }
 
   .webcam:hover {
