--- a/FrontEnd/logos-test/src/components/OvVideo.css
+++ b/FrontEnd/logos-test/src/components/OvVideo.css
@@ -2,7 +2,7 @@
     border-radius: 20px;
     position: relative;
     width: 100%;
-    max-width: 600px;
+    /*max-width: 600px; */
     transform: rotateY(180deg);
     -webkit-transform:rotateY(180deg); /* Safari and Chrome */
     -moz-transform:rotateY(180deg); /* Firefox */
